# nexterm

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
Casks/: nexterm.rb
Formula/: nexterm.rb
src/: app.css  app.html  declarations.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: provider.rs
src-tauri/src/docker/: containers.rs  images.rs  mod.rs
src-tauri/src/git/: diff.rs  graph.rs  mod.rs
src-tauri/src/kubernetes/: cluster.rs  mod.rs
src-tauri/src/plugins/: loader.rs
src-tauri/src/pty/: manager.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/system/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src-tauri/src/updater/: mod.rs
src/lib/components/docker/: ContainerList.svelte  ContainerLogs.svelte  DockerPanel.svelte
src/lib/components/filesystem/: FileExplorer.svelte  FuzzyFinder.svelte
src/lib/components/git/: BranchGraph.svelte  DiffViewer.svelte  GitPanel.svelte
src/lib/components/keyboard/: VirtualKeyboard.svelte
src/lib/stores/: docker.svelte.ts  git.svelte.ts  kubernetes.svelte.ts  settings.svelte.ts  ssh.svelte.ts  system.svelte.ts  terminal.svelte.ts  theme.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: ai-chat.ts  audio.ts  ipc.ts  keybindings.ts  model-discovery.ts  theme.ts  updater.ts
src/routes/: +layout.svelte  +page.svelte
static/kb_layouts/: qwerty.json
static/themes/: blade.json  cyberpunk.json  matrix.json  nord.json  tron.json
(+24 files in other folders)
