[package]
name = "nexterm"
version = "1.3.0"
description = "NEXTERM - AI-powered terminal emulator and DevOps command center"
authors = ["NEXTERM Contributors"]
edition = "2021"

[lib]
name = "nexterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
chrono = "0.4"
